load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "k0s.io/k0s/cmd/gitd",
    visibility = ["//visibility:private"],
    deps = ["//pkg/cli/gitd:go_default_library"],
)

go_binary(
    name = "gitd",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
