load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "k0s.io/k0s/cmd/gos",
    visibility = ["//visibility:private"],
    deps = ["//pkg/cli/gos:go_default_library"],
)

go_binary(
    name = "gos",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
