load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "k0s.io/cmd/hub",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/cli/hub:go_default_library",
        "//pkg/log:go_default_library",
    ],
)

go_binary(
    name = "hub",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
