load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["ivy.go"],
    importpath = "k0s.io/k0s/cmd/ivy",
    visibility = ["//visibility:private"],
    deps = [
        "//vendor/robpike.io/ivy/config:go_default_library",
        "//vendor/robpike.io/ivy/exec:go_default_library",
        "//vendor/robpike.io/ivy/parse:go_default_library",
        "//vendor/robpike.io/ivy/run:go_default_library",
        "//vendor/robpike.io/ivy/scan:go_default_library",
        "//vendor/robpike.io/ivy/value:go_default_library",
    ],
)

go_binary(
    name = "ivy",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
