load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "k0s.io/cmd/k16s",
    visibility = ["//visibility:private"],
    deps = ["//pkg/cli/k16s:go_default_library"],
)

go_binary(
    name = "k16s",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
