load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["cmd.go"],
    importpath = "k0s.io/cmd/kproxy",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/kproxy:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/runtime/schema:go_default_library",
        "//vendor/k8s.io/client-go/rest:go_default_library",
        "//vendor/k8s.io/client-go/tools/clientcmd:go_default_library",
        "//vendor/k8s.io/kubectl/pkg/scheme:go_default_library",
    ],
)

go_binary(
    name = "kproxy",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
