load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["kubectl.go"],
    importpath = "k0s.io/cmd/kubectl",
    visibility = ["//visibility:private"],
    deps = [
        "//vendor/github.com/spf13/pflag:go_default_library",
        "//vendor/k8s.io/client-go/plugin/pkg/client/auth:go_default_library",
        "//vendor/k8s.io/component-base/cli/flag:go_default_library",
        "//vendor/k8s.io/kubectl/pkg/cmd:go_default_library",
        "//vendor/k8s.io/kubectl/pkg/util/logs:go_default_library",
    ],
)

go_binary(
    name = "kubectl",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
